--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -79,4 +79,5 @@ jobs:
         uses: cloudflare/wrangler-action@1.3.0
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
-          environment: "prod"
+          environment: prod
+          workingDirectory: web
