fix(build): run tree

--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -77,6 +77,10 @@ jobs:
         with:
           name: dist
 
+      - name: Run Tree
+        run: |
+          tree
+
       - name: Deploy
         uses: cloudflare/wrangler-action@1.3.0
         with:
