--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -53,15 +53,6 @@ jobs:
           yarn ng run holostats:app-shell:production
           yarn ng run holostats:workers:production
 
-      - name: Upload dist
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist
-          path: |
-            web/dist
-            web/workers/dist
-          if-no-files-found: error
-
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
@@ -72,14 +63,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@master
 
-      - name: Download dist
-        uses: actions/download-artifact@v2
-        with:
-          name: dist
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - name: Run Tree
+      - name: Add yarn global bin to path
+        run: echo "::add-path::$(yarn global bin)"
+
+      - name: Cache
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Build
         run: |
-          tree
+          yarn install
+          sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
+          yarn ng run holostats:app-shell:production
+          yarn ng run holostats:workers:production
 
       - name: Deploy
         uses: cloudflare/wrangler-action@1.3.0
