--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -19,6 +19,9 @@ url = "2.1.1"
 warp = { version = "0.2.5", default-features = false }
 cfg-if = "0.1.10"
 serde_with = "1.4.0"
+hmac = "0.9.0"
+sha2 = "0.9.1"
+hex = "0.4.2"
 
 [profile.release]
 lto = true
