build: use wildcard matching

--- a/.github/workflows/angular.yml
+++ b/.github/workflows/angular.yml
@@ -3,11 +3,11 @@ name: Angular
 on:
   push:
     paths:
-      - web
+      - web/**
       - .github/workflows/angular.yml
   pull_request:
     paths:
-      - web
+      - web/**
 
 defaults:
   run:
