--- a/.github/workflows/web-pr.yml
+++ b/.github/workflows/web-pr.yml
@@ -29,16 +29,11 @@ jobs:
         with:
           node-version: 10.x
 
-      - name: Add yarn global bin to path
-        run: echo "::add-path::$(yarn global bin)"
-
-      - name: Run Prettier
-        run: |
-          yarn global add prettier
-          prettier --check --ignore-path .gitignore 'src/**/*.{ts,js,json.html,scss}'
-
       - name: Install dependencies
         run: yarn install --prefer-offline
+
+      - name: Run Prettier
+        run: yarn prettier --check --ignore-path .gitignore 'src/**/*.{ts,js,json.html,scss}'
 
       - name: Build
         run: yarn build --prod --outputHashing=none --serviceWorker=false
