--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "@types/d3-time-format": "^3.0.0",
     "@types/express": "^4.17.8",
     "@types/node": "~14.14.6",
+    "prettier": "^2.1.2",
     "tslint": "~6.1.0",
     "typescript": "~4.0.5"
   }
