--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,21 +7,24 @@ edition = "2018"
 
 [dependencies]
 bytes = "0.5.6"
+cfg-if = "1.0.0"
 chrono = { version = "0.4.19", features = ["serde"] }
 futures = "0.3.7"
+hex = "0.4.2"
+hmac = "0.10.1"
 reqwest = { version = "0.10.8", default-features = false, features = ["json", "rustls-tls"] }
 roxmltree = "0.13.0"
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
+serde_with = "1.5.1"
+sha2 = "0.9.1"
 sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono"] }
 tokio = { version = "0.2.22", features = ["macros"] }
+tracing = "0.1.21"
+tracing-appender = "0.1.1"
+tracing-subscriber = "0.2.15"
 url = "2.1.1"
 warp = { version = "0.2.5", default-features = false }
-cfg-if = "1.0.0"
-serde_with = "1.5.1"
-hmac = "0.10.1"
-sha2 = "0.9.1"
-hex = "0.4.2"
 
 [profile.release]
 lto = true
