--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
 serde_with = "1.5.1"
 sha2 = "0.9.1"
-sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "macros", "postgres", "chrono"] }
+sqlx = { version = "0.4.1", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono"] }
 tokio = { version = "0.2.22", features = ["macros"] }
 tracing = "0.1.21"
 tracing-appender = "0.1.1"
