--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -29,6 +29,9 @@ warp = { version = "0.2.5", default-features = false }
 [profile.release]
 lto = true
 
+[features]
+tls = ["warp/tls"]
+
 [[bin]]
 name = "api"
 path = "src/api/main.rs"
