--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -65,6 +65,7 @@ jobs:
           S3_KEY_ID: S3_KEY_ID
           S3_ACCESS_KEY: S3_ACCESS_KEY
           S3_HOST: S3_HOST
+          NEW_RELIC_API_KEY: NEW_RELIC_API_KEY
 
       - name: Build
         if: github.ref == 'refs/heads/master'
@@ -80,6 +81,7 @@ jobs:
           S3_KEY_ID: ${{ secrets.S3_KEY_ID }}
           S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
           S3_HOST: ${{ secrets.S3_HOST }}
+          NEW_RELIC_API_KEY: ${{ secrets.NEW_RELIC_API_KEY }}
 
       - name: Deploy
         if: github.ref == 'refs/heads/master'
