--- a/web/package.json
+++ b/web/package.json
@@ -11,40 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.2.1",
-    "@angular/cdk": "~10.2.7",
-    "@angular/common": "~10.2.1",
-    "@angular/compiler": "~10.2.1",
-    "@angular/core": "~10.2.1",
-    "@angular/forms": "~10.2.1",
-    "@angular/localize": "~10.2.1",
-    "@angular/material": "~10.2.7",
-    "@angular/platform-browser": "~10.2.1",
-    "@angular/platform-browser-dynamic": "~10.2.1",
-    "@angular/platform-server": "~10.2.1",
-    "@angular/router": "~10.2.1",
-    "@angular/service-worker": "~10.2.1",
+    "@angular/animations": "~11.1.1",
+    "@angular/cdk": "~11.1.1",
+    "@angular/common": "~11.1.1",
+    "@angular/compiler": "~11.1.1",
+    "@angular/core": "~11.1.1",
+    "@angular/forms": "~11.1.1",
+    "@angular/localize": "~11.1.1",
+    "@angular/material": "~11.1.1",
+    "@angular/platform-browser": "~11.1.1",
+    "@angular/platform-browser-dynamic": "~11.1.1",
+    "@angular/platform-server": "~11.1.1",
+    "@angular/router": "~11.1.1",
+    "@angular/service-worker": "~11.1.1",
     "@cloudflare/kv-asset-handler": "^0.0.12",
-    "@nguniversal/common": "~10.1.0",
-    "@nguniversal/express-engine": "^10.1.0",
-    "@swimlane/ngx-charts": "^16.0.0",
+    "@nguniversal/common": "~11.1.1",
+    "@nguniversal/express-engine": "^11.1.1",
+    "@swimlane/ngx-charts": "~17.0.0",
     "aws4fetch": "^1.0.13",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
-    "ngx-ellipsis": "^3.0.0",
+    "ngx-ellipsis": "~3.1.1",
     "rxjs": "~6.6.3",
-    "tslib": "^2.0.3",
+    "tslib": "~2.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.2.1",
-    "@angular/language-service": "~10.2.1",
+    "@angular-devkit/build-angular": "~0.1101.2",
+    "@angular/cli": "~11.1.2",
+    "@angular/compiler-cli": "~11.1.1",
+    "@angular/language-service": "~11.1.1",
     "@cloudflare/workers-types": "^2.1.0",
     "@types/d3-format": "^2.0.0",
     "@types/d3-time-format": "^3.0.0",
-    "@types/express": "^4.17.9",
+    "@types/express": "~4.17.11",
     "@types/node": "~14.14.6",
     "prettier": "^2.2.1",
     "tslint": "~6.1.0",
