--- a/.github/workflows/web-dev.yml
+++ b/.github/workflows/web-dev.yml
@@ -42,7 +42,9 @@ jobs:
         run: |
           sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
           yarn build --prod --outputHashing=none --serviceWorker=false
-          yarn ng run holostats:workers:production
+
+      - name: Build workers
+        run: yarn tsc -P workers/tsconfig.json
 
       - name: Deploy
         uses: cloudflare/wrangler-action@1.3.0
