--- a/.github/workflows/web-prod.yml
+++ b/.github/workflows/web-prod.yml
@@ -41,8 +41,10 @@ jobs:
       - name: Build
         run: |
           sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
-          yarn ng run holostats:app-shell:production
-          yarn ng run holostats:workers:production
+          yarn build --prod
+
+      - name: Build workers
+        run: yarn tsc -P workers/tsconfig.json
 
       - name: Deploy
         uses: cloudflare/wrangler-action@1.3.0
