--- a/web/package.json
+++ b/web/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "TS_NODE_PROJECT='./e2e/tsconfig.json' codeceptjs run --config e2e --steps"
   },
   "private": true,
   "dependencies": {
@@ -40,7 +40,10 @@
     "@cloudflare/workers-types": "^2.1.0",
     "@types/d3-format": "^2.0.0",
     "@types/d3-time-format": "^3.0.0",
+    "codeceptjs": "^3.0.4",
+    "playwright": "^1.7.1",
     "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
     "tslint": "~6.1.0",
     "typescript": "~4.0.5"
   }
