--- a/.github/workflows/web-pr.yml
+++ b/.github/workflows/web-pr.yml
@@ -37,3 +37,11 @@ jobs:
 
       - name: Build
         run: yarn build --prod --outputHashing=none --serviceWorker=false
+
+      - name: Setup playwright
+        uses: microsoft/playwright-github-action@v1
+
+      - name: Run e2e
+        run: |
+          node e2e/server.js &
+          yarn e2e
