--- a/.github/workflows/web-prod.yml
+++ b/.github/workflows/web-prod.yml
@@ -43,6 +43,14 @@ jobs:
           sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
           yarn build --prod
 
+      - name: Setup playwright
+        uses: microsoft/playwright-github-action@v1
+
+      - name: Run e2e
+        run: |
+          node e2e/server.js &
+          yarn e2e
+
       - name: Build workers
         run: yarn tsc -P workers/tsconfig.json
 
