feat(web): lazy loading locale-related module

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -25,5 +25,5 @@
     "strictInjectionParameters": true
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"]
+  "include": ["src/**/*.d.ts", "src/i18n"]
 }
