--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "@angular/service-worker": "~11.1.1",
     "@cloudflare/kv-asset-handler": "^0.0.12",
     "@swimlane/ngx-charts": "~17.0.0",
+    "apexcharts": "^3.24.0",
     "aws4fetch": "^1.0.13",
     "date-fns": "^2.16.1",
     "ngx-ellipsis": "~3.1.1",
