--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -68,7 +68,7 @@ jobs:
           NEW_RELIC_API_KEY: NEW_RELIC_API_KEY
 
       - name: Build
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/dev'
         run: |
           cargo build --release
           strip target/release/{api,subscribe,stream_stat,channel_stat}
@@ -94,3 +94,16 @@ jobs:
           key: ${{ secrets.DEPLOY_KEY }}
           source: "server/target/release/api,server/target/release/subscribe,server/target/release/stream_stat,server/target/release/channel_stat"
           target: "bin"
+          overwrite: true
+
+      - name: Deploy development
+        if: github.ref == 'refs/heads/dev'
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.DEPLOY_HOST_DEV }}
+          username: ci
+          port: ${{ secrets.DEPLOY_PORT }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          source: "server/target/release/api,server/target/release/subscribe,server/target/release/stream_stat,server/target/release/channel_stat"
+          target: "bin"
+          overwrite: true
