Temporary Fix wrangler depoly problem

--- a/.github/workflows/web-dev.yml
+++ b/.github/workflows/web-dev.yml
@@ -61,3 +61,4 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           workingDirectory: web
           environment: dev
+          wranglerVersion: 1.15.1
