--- a/.github/workflows/web-prod.yml
+++ b/.github/workflows/web-prod.yml
@@ -61,3 +61,4 @@ jobs:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           workingDirectory: web
           environment: prod
+          wranglerVersion: 1.15.1
