--- a/server/systemd/holostats_stream_stat.service
+++ b/server/systemd/holostats_stream_stat.service
@@ -5,6 +5,7 @@ Description=HoloStats - Stream Stat
 Type=simple
 ExecStart=/root/server/target/release/stream_stat
 Restart=on-failure
+RuntimeMaxSec=5
 
 [Install]
 WantedBy=multi-user.target
