--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 bytes = "1.0.1"
 chrono = { version = "0.4.19", features = ["serde"] }
+dotenv = "0.15.0"
 futures = "0.3.14"
 hex = "0.4.3"
 hmac = "0.10.1"
