--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -62,13 +62,13 @@ jobs:
           cargo test
 
       - name: Build
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
         run: |
           cargo build --release
           strip target/release/{api,subscribe,stream_stat,channel_stat,rss_refresh}
 
       - name: Release
-        if: github.ref == 'refs/heads/master'
+        if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
         with:
           files: |
