--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -67,15 +67,9 @@ jobs:
           cargo build --release
           strip target/release/{api,subscribe,stream_stat,channel_stat,rss_refresh}
 
-      - name: Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
         with:
-          files: |
-            target/release/api
-            target/release/subscribe
-            target/release/stream_stat
-            target/release/channel_stat
-            target/release/rss_refresh
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: bin
+          # upload-artifact doesn't work with working-directory
+          path: server/target/release/{api,subscribe,stream_stat,channel_stat,rss_refresh}
