--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2018"
 [dependencies]
 bytes = "1.0.1"
 chrono = { version = "0.4.19", features = ["serde"] }
-dotenv = "0.15.0"
 futures = "0.3.14"
 hex = "0.4.3"
 hmac = "0.10.1"
 log = "0.4.14"
+once_cell = "1.7.2"
 reqwest = { version = "0.11.3", default-features = false, features = [
     "json",
     "rustls-tls"
@@ -28,6 +28,7 @@ sqlx = { version = "0.5.2", default-features = false, features = [
     "chrono"
 ] }
 tokio = { version = "1.5.0", features = ["macros"] }
+toml = "0.5.8"
 tracing = "0.1.25"
 tracing-futures = "0.2.5"
 tracing-newrelic = { git = "https://github.com/PoiScript/tracing-newrelic.git", rev = "838560a4acd346db2a9cfd1ca109518e5125ae5d" }
