--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,23 +53,10 @@ jobs:
       - name: Format
         run: cargo fmt -- --check
 
-      - name: Create .env
-        run: mv .env.example .env
+      - name: Create holostats.toml
+        run: mv holostats.example.toml holostats.toml
 
       - name: Run Test
         run: |
           psql postgres://holostats:holostats@localhost/holostats -f sql/test.sql
           cargo test
-
-      - name: Build
-        if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
-        run: |
-          cargo build --release
-          strip target/release/{api,subscribe,stream_stat,channel_stat,rss_refresh}
-
-      - name: Upload Artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: bin
-          # upload-artifact doesn't work with working-directory
-          path: server/target/release/{api,subscribe,stream_stat,channel_stat,rss_refresh}
