fix(ci): update rust.yml

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -60,3 +60,6 @@ jobs:
         run: |
           psql postgres://holostats:holostats@localhost/holostats -f sql/test.sql
           cargo test
+        env:
+          DATABASE_URL: postgres://holostats:holostats@localhost/holostats
+
