[TaiwanV] Exclude the test in modification

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -68,6 +68,8 @@ jobs:
         run: |
           cargo build --release
           strip target/release/{api,subscribe,stream_stat,channel_stat,rss_refresh}
+        env:
+          DATABASE_URL: postgres://holostats:holostats@localhost/holostats
 
       - name: Deploy development
         uses: appleboy/scp-action@master
