--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,65 +1,15 @@
-[package]
-name = "holostats-server"
-version = "0.1.0"
-authors = ["PoiScript <poiscript@gmail.com>"]
-edition = "2018"
-
-[dependencies]
-bytes = "1.0.1"
-chrono = { version = "0.4.19", features = ["serde"] }
-futures = "0.3.14"
-hex = "0.4.3"
-hmac = "0.10.1"
-log = "0.4.14"
-once_cell = "1.7.2"
-reqwest = { version = "0.11.3", default-features = false, features = [
-    "json",
-    "rustls-tls"
-] }
-roxmltree = "0.14.1"
-serde = { version = "1.0.125", features = ["derive"] }
-serde_json = "1.0.64"
-serde_with = "1.8.1"
-sha2 = "0.9.3"
-sqlx = { version = "0.5.2", default-features = false, features = [
-    "runtime-tokio-rustls",
-    "macros",
-    "postgres",
-    "chrono"
-] }
-tokio = { version = "1.5.0", features = ["macros"] }
-toml = "0.5.8"
-tracing = "0.1.25"
-tracing-futures = "0.2.5"
-tracing-newrelic = { git = "https://github.com/PoiScript/tracing-newrelic.git", rev = "838560a4acd346db2a9cfd1ca109518e5125ae5d" }
-tracing-subscriber = { version = "0.2.17", default-features = false, features = [
-    "registry"
-] }
-url = "2.2.1"
-warp = { version = "0.3.1", default-features = false }
+[workspace]
+members = [
+    "holostats-api",
+    "holostats-channel-stat",
+    "holostats-config",
+    "holostats-database",
+    "holostats-request",
+    "holostats-rss-refresh",
+    "holostats-stream-stat",
+    "holostats-subscribe",
+    "holostats-utils",
+]
 
 [profile.release]
 lto = true
-
-[[bin]]
-name = "api"
-path = "src/api/main.rs"
-
-[[bin]]
-name = "stream_stat"
-path = "src/stream_stat/main.rs"
-
-[[bin]]
-name = "channel_stat"
-path = "src/channel_stat/main.rs"
-
-[[bin]]
-name = "rss_refresh"
-path = "src/rss_refresh/main.rs"
-
-[[bin]]
-name = "subscribe"
-path = "src/subscribe/main.rs"
-
-[dev-dependencies]
-pretty_assertions = "0.7.2"
