fix(server): update bin name

--- a/server/holostats-channel-stat/Cargo.toml
+++ b/server/holostats-channel-stat/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["PoiScript <poiscript@gmail.com>"]
 edition = "2018"
 
 [[bin]]
-name = "channel-stat"
+name = "channel_stat"
 path = "main.rs"
 
 [dependencies]
