--- a/server/holostats-stream-stat/Cargo.toml
+++ b/server/holostats-stream-stat/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["PoiScript <poiscript@gmail.com>"]
 edition = "2018"
 
 [[bin]]
-name = "stream-stat"
+name = "stream_stat"
 path = "main.rs"
 
 [dependencies]
