feat(server): add irys

--- a/server/holostats.example.toml
+++ b/server/holostats.example.toml
@@ -266,6 +266,10 @@ youtube = "UCHsx4Hqa-1ORjQTh9TYDhww"
 bilibili = "674600646"
 
 [[vtubers]]
+id = "irys"
+youtube = "UC8rcEBzJSleTkf_-agPM20g"
+
+[[vtubers]]
 id = "miyabi"
 youtube = "UC6t3-_N8A6ME1JShZHHqOMw"
 
