--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       interval: weekly
       time: "09:00"
     open-pull-requests-limit: 10
-    target-branch: dev
+    target-branch: master
     ignore:
       # ignore all patch updates
       - dependency-name: "*"
@@ -18,7 +18,7 @@ updates:
       interval: weekly
       time: "09:00"
     open-pull-requests-limit: 10
-    target-branch: dev
+    target-branch: master
     ignore:
       # ignore all patch updates
       - dependency-name: "*"
