--- a/.github/workflows/web-prod.yml
+++ b/.github/workflows/web-prod.yml
@@ -39,9 +39,7 @@ jobs:
         run: yarn prettier --check --ignore-path .gitignore 'src/**/*.{ts,js,json.html,scss}'
 
       - name: Build
-        run: |
-          sed -i "s/GIT_COMMIT_HASH/$(git rev-parse --short HEAD)/" src/environments/*
-          yarn build --prod
+        run: yarn build --prod
 
       - name: Setup playwright
         uses: microsoft/playwright-github-action@v1
@@ -51,13 +49,3 @@ jobs:
         run: |
           node e2e/server.js &
           yarn e2e
-
-      - name: Build workers
-        run: yarn tsc -P workers/tsconfig.json
-
-      - name: Deploy
-        uses: cloudflare/wrangler-action@1.3.0
-        with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          workingDirectory: web
-          environment: prod
