feat: add hololive english council

--- a/server/holostats.example.toml
+++ b/server/holostats.example.toml
@@ -270,6 +270,26 @@ id = "irys"
 youtube = "UC8rcEBzJSleTkf_-agPM20g"
 
 [[vtubers]]
+id = "sana"
+youtube = "UCsUj0dszADCGbF3gNrQEuSQ"
+
+[[vtubers]]
+id = "ceres"
+youtube = "UCO_aKKYxn4tvrqPjcTzZ6EQ"
+
+[[vtubers]]
+id = "ouro"
+youtube = "UCmbs8T6MWqUHP1tIQvSgKrg"
+
+[[vtubers]]
+id = "mumei"
+youtube = "UC3n5uGu18FoCy23ggWWp8tA"
+
+[[vtubers]]
+id = "hakos"
+youtube = "UCgmPnx-EEeOrZSg5Tiw7ZRQ"
+
+[[vtubers]]
 id = "miyabi"
 youtube = "UC6t3-_N8A6ME1JShZHHqOMw"
 
