--- a/server/holostats-api/Cargo.toml
+++ b/server/holostats-api/Cargo.toml
@@ -12,10 +12,12 @@ path = "main.rs"
 anyhow = "1.0.40"
 bytes = "1.0.1"
 chrono = { version = "0.4.19", features = ["serde"] }
+hmac = "0.11.0"
 roxmltree = "0.14.1"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 serde_with = "1.8.1"
+sha-1 = "0.9.6"
 tokio = { version = "1.5.0", features = ["macros"] }
 tracing = "0.1.25"
 tracing-futures = "0.2.5"
