--- a/server/holostats-api/Cargo.toml
+++ b/server/holostats-api/Cargo.toml
@@ -12,6 +12,7 @@ path = "main.rs"
 anyhow = "1.0.43"
 bytes = "1.0.1"
 chrono = { version = "0.4.19", features = ["serde"] }
+hex = "0.4.3"
 hmac = "0.11.0"
 roxmltree = "0.14.1"
 serde = { version = "1.0.128", features = ["derive"] }
