--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -8,13 +8,13 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module": "es2020",
+    "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "importHelpers": true,
     "target": "es2015",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2018", "dom"],
+    "lib": ["ESNext", "dom"],
     "allowSyntheticDefaultImports": true,
     "paths": {
       "vtubers": ["./vtubers.ts"]
