feat(server): add youtube_live_chat request

--- a/server/holostats-request/Cargo.toml
+++ b/server/holostats-request/Cargo.toml
@@ -24,3 +24,7 @@ reqwest = { version = "0.11.4", default-features = false, features = [
 ] }
 holostats-config = { path = "../holostats-config" }
 holostats-utils = { path = "../holostats-utils" }
+
+[dev-dependencies]
+pretty_assertions = "1.0.0"
+serde_json = "1.0.72"
