--- a/server/holostats-config/Cargo.toml
+++ b/server/holostats-config/Cargo.toml
@@ -3,6 +3,7 @@ name = "holostats-config"
 version = "0.1.0"
 authors = ["PoiScript <poiscript@gmail.com>"]
 edition = "2018"
+publish = false
 
 [lib]
 path = "lib.rs"
