--- a/server/holostats-live-chat/Cargo.toml
+++ b/server/holostats-live-chat/Cargo.toml
@@ -3,6 +3,7 @@ name = "holostats-live-chat"
 version = "0.1.0"
 authors = ["PoiScript <poiscript@gmail.com>"]
 edition = "2018"
+publish = false
 
 [[bin]]
 name = "live_chat"
@@ -16,7 +17,7 @@ futures = "0.3.18"
 holostats-config = { path = "../holostats-config" }
 holostats-database = { path = "../holostats-database" }
 holostats-request = { path = "../holostats-request" }
-holostats-utils = { path = "../holostats-utils" }
+holostats-tracing = { path = "../holostats-tracing" }
 quick-protobuf = "0.8.0"
 serde_json = "1.0.72"
 tokio = { version = "1.14.0", features = ["macros"] }
