--- a/server/holostats-database/Cargo.toml
+++ b/server/holostats-database/Cargo.toml
@@ -23,3 +23,4 @@ tracing = "0.1.26"
 tracing-futures = "0.2.5"
 sqlx-core = "0.5.9"
 holostats-config = { path = "../holostats-config" }
+futures-util = "0.3.18"
