--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "dev": "ng serve",
     "start": "ng serve",
     "prebuild": "node env.ts",
     "build": "ng build",
@@ -25,11 +26,12 @@
     "@angular/router": "~13.0.2",
     "@angular/service-worker": "~13.0.2",
     "@cloudflare/kv-asset-handler": "^0.1.0",
+    "@popperjs/core": "^2.11.0",
     "apexcharts": "^3.25.0",
     "aws4fetch": "^1.0.13",
     "date-fns": "^2.18.0",
-    "ngx-ellipsis": "~3.1.1",
-    "rxjs": "~6.6.6",
+    "ngx-ellipsis": "^3.1.1",
+    "rxjs": "^7.4.0",
     "tslib": "~2.1.0",
     "zone.js": "~0.11.4"
   },
