--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "prebuild": "node env.ts",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
