--- a/web/package.json
+++ b/web/package.json
@@ -26,7 +26,7 @@
     "@angular/router": "~13.0.2",
     "@angular/service-worker": "~13.0.2",
     "@cloudflare/kv-asset-handler": "^0.1.0",
-    "@popperjs/core": "^2.11.0",
+    "@floating-ui/dom": "^0.1.7",
     "apexcharts": "^3.25.0",
     "aws4fetch": "^1.0.13",
     "date-fns": "^2.18.0",
