feat(web): use d3

--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,9 @@
     "@floating-ui/dom": "^0.1.7",
     "apexcharts": "^3.25.0",
     "aws4fetch": "^1.0.13",
+    "d3-array": "^3.1.1",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.0.1",
     "date-fns": "^2.18.0",
     "rxjs": "^7.4.0",
     "tslib": "~2.1.0",
@@ -40,6 +43,9 @@
     "@angular/compiler-cli": "~13.0.2",
     "@angular/language-service": "~13.0.2",
     "@cloudflare/workers-types": "^2.1.0",
+    "@types/d3-array": "^3.0.2",
+    "@types/d3-scale": "^4.0.2",
+    "@types/d3-shape": "^3.0.2",
     "codeceptjs": "^3.0.5",
     "playwright": "^1.9.1",
     "prettier": "^2.2.1",
