--- a/web/ngsw-config.json
+++ b/web/ngsw-config.json
@@ -7,7 +7,13 @@
       "installMode": "prefetch",
       "updateMode": "prefetch",
       "resources": {
-        "files": ["/index.html", "/manifest.webmanifest", "/*.css", "/*.js"]
+        "files": [
+          "/index.html",
+          "/manifest.webmanifest",
+          "/*.css",
+          "/*.js",
+          "/i18n/*.js"
+        ]
       }
     },
     {
