--- a/web/package.json
+++ b/web/package.json
@@ -30,6 +30,7 @@
     "apexcharts": "^3.25.0",
     "aws4fetch": "^1.0.13",
     "d3-array": "^3.1.1",
+    "d3-ease": "^3.0.1",
     "d3-scale": "^4.0.2",
     "d3-shape": "^3.0.1",
     "date-fns": "^2.18.0",
@@ -44,6 +45,7 @@
     "@angular/language-service": "~13.0.2",
     "@cloudflare/workers-types": "^2.1.0",
     "@types/d3-array": "^3.0.2",
+    "@types/d3-ease": "^3.0.0",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.0.2",
     "codeceptjs": "^3.0.5",
