chore(web): update prefix hs -> hls

--- a/web/angular.json
+++ b/web/angular.json
@@ -29,7 +29,7 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "hs",
+      "prefix": "hls",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
