feat(web): initial support of youtube playlist

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": [],
+    "types": ["gapi", "gapi.auth2"],
     "baseUrl": "./",
     "sourceMap": true,
     "declaration": false,
