--- a/web/package.json
+++ b/web/package.json
@@ -48,6 +48,7 @@
     "@types/d3-ease": "^3.0.0",
     "@types/d3-scale": "^4.0.2",
     "@types/d3-shape": "^3.0.2",
+    "@types/gapi.auth2": "^0.0.55",
     "codeceptjs": "^3.0.5",
     "playwright": "^1.9.1",
     "prettier": "^2.2.1",
