build(web): add inlineCritical and hmr

--- a/web/angular.json
+++ b/web/angular.json
@@ -63,7 +63,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": true
+                },
+                "fonts": true
+              },
               "outputHashing": "all",
               "statsJson": true,
               "aot": true,
