feat(web): lazy loading pages modules

--- a/web/angular.json
+++ b/web/angular.json
@@ -53,7 +53,7 @@
             "buildOptimizer": false,
             "sourceMap": true,
             "optimization": false,
-            "namedChunks": true
+            "namedChunks": false
           },
           "configurations": {
             "production": {
