--- a/server/holostats.example.toml
+++ b/server/holostats.example.toml
@@ -32,11 +32,12 @@ key_id = "XXX"
 access_key = "YYY"
 region = "us-east-1"
 public_url = "https://example.com/s3"
+bucket = "bucket-name"
 
 # New Relic Configuration
 # HoloStats uses New Relic for collecting metrics data
 #
-# You can opt out by removing and commenting out the whole section
+# You can opt out by commenting out the whole section
 [newrelic]
 api_key = "NRII-XXXXXXX-XXXXXXXXXX"
 
