chore: add hololive id 3rd gen

--- a/server/holostats.example.toml
+++ b/server/holostats.example.toml
@@ -267,6 +267,18 @@ id = "reine"
 youtube = "UChgTyjG-pdNvxxhdsXfHQ5Q"
 
 [[vtubers]]
+id = "vestia"
+youtube = "UCTvHWSfBZgtxE4sILOaurIQ"
+
+[[vtubers]]
+id = "kaela"
+youtube = "UCZLZ8Jjx_RN2CXloOmgTHVg"
+
+[[vtubers]]
+id = "kobo"
+youtube = "UCjLEmnpCNeisMxy134KPwWw"
+
+[[vtubers]]
 id = "amelia"
 youtube = "UCyl1z3jo3XHR1riLFKG5UAg"
 bilibili = "674600649"
